Replacing constructor with static valueOf